--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-md-8 offset-md-2 pop">
+        <div class="col-md-8 offset-md-2">
           <p>
             Acceptitas was founded by Emmet Halm to empower motivated students
             like him to dream big and find their own narrative through his
@@ -84,8 +84,8 @@
         </div>
       </div>
       &nbsp;
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+      <div class="row pop">
+        <div class="col-md-4 offset-md-2 my-auto">
           <h3>Hi, I'm Emmet!</h3>
           <p>
             … is what Emmet would say with a big smile if this was written in
@@ -110,6 +110,7 @@
       </div>
       <div class="row">
         <div class="col-md-8 offset-md-2">
+          &nbsp;
           <h3>Emmet's Narrative</h3>
           <p>
             Emmet struggled with learning differences in school and was
