--- a/contact.html
+++ b/contact.html
@@ -71,26 +71,8 @@
       <br />
       <div class="row">
         <div class="col-6 offset-3">
-          <img src="images/stock/excited.png" alt="" />
+          <img src="images/contact/excited.png" alt="" />
           <br />
-        </div>
-      </div>
-      &nbsp;
-      <div class="row">
-        <div class="col-sm-2 text-center offset-sm-3">
-          <img src="images/services/icons/bulb.png" alt="" />
-          &nbsp;
-          <h6>Call</h6>
-        </div>
-        <div class="col-sm-2 text-center">
-          <img src="images/services/icons/list.png" alt="" />
-          &nbsp;
-          <h6>Schedule Free Consulatation</h6>
-        </div>
-        <div class="col-sm-2 text-center">
-          <img src="images/services/icons/speech.png" alt="" />
-          &nbsp;
-          <h6>Build Your Narrative</h6>
         </div>
       </div>
       &nbsp;
@@ -105,6 +87,24 @@
             we should get in contact with you, and we’ll be in touch. Let’s get
             building!
           </p>
+        </div>
+      </div>
+      &nbsp;
+      <div class="row">
+        <div class="col-sm-2 text-center offset-sm-3">
+          <img src="images/contact/icons/mail.png" alt="" />
+          &nbsp;
+          <h6>Call or Email</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/contact/icons/meeting.png" alt="" />
+          &nbsp;
+          <h6>Free Consulatation</h6>
+        </div>
+        <div class="col-sm-2 text-center">
+          <img src="images/contact/icons/mountain.png" alt="" />
+          &nbsp;
+          <h6>Build Your Narrative</h6>
         </div>
       </div>
     </div>
