--- a/contact.html
+++ b/contact.html
@@ -91,17 +91,17 @@
       </div>
       &nbsp;
       <div class="row">
-        <div class="col-sm-2 text-center offset-sm-3">
+        <div class="col-md-2 col-4 text-center offset-md-3">
           <img src="images/contact/icons/mail.png" alt="" />
           &nbsp;
           <h6>Call or Email</h6>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/meeting.png" alt="" />
           &nbsp;
           <h6>Free Consulatation</h6>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/mountain.png" alt="" />
           &nbsp;
           <h6>Build Your Narrative</h6>
