--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-sm-2 text-center offset-md-2">
+        <div class="col-sm-2 text-center offset-sm-2">
           <img src="images/index/icons/bulb.png" alt="">
           &nbsp;
           <h6>Strategy Consultations</h6>
