--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-md-3">
           <img src="images/contact/excited.png" alt="" />
           <br />
         </div>
