--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-sm-2 text-center offset-sm-2">
+        <div class="col-md-2 col-3 text-center offset-md-2">
           <img src="images/index/icons/bulb.png" alt="">
           &nbsp;
           <h6>Strategy Consultations</h6>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-md-2 col-3 text-center">
           <img src="images/index/icons/list.png" alt="">
           &nbsp;
           <h6>Narrative Assessment</h6>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-md-2 col-3 text-center">
           <img src="images/index/icons/speech.png" alt="">
           &nbsp;
           <h6>Mock Interviews</h6>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-md-2 col-3 text-center">
           <img src="images/index/icons/pencil.png" alt="">
           &nbsp;
           <h6>Last-Minute Editing</h6>
