more minor responsiveness fixes (mobile)

--- a/about.html
+++ b/about.html
@@ -157,13 +157,19 @@
         <div class="row">
           <div class="col-6 text-left">
             <p>
-              <small>Acceptitas LLC, 2020</small> <br />
+              <small> Acceptitas LLC, 2020</small> <br />
               <small>
-                Email: contact@acceptitas.com
+                Email:
+                <a href="mailto:contact@acceptitas.com">
+                  contact@acceptitas.com
+                </a>
               </small>
               <br />
               <small>
-                Phone: +1-214-930-6576
+                Phone:
+                <a href="tel:+12149306576">
+                  +1-(214)-930-6576
+                </a>
               </small>
             </p>
           </div>
