--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
         <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/meeting.png" alt="" />
           &nbsp;
-          <h6>Free Consulatation</h6>
+          <h6>Free Consultation</h6>
         </div>
         <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/mountain.png" alt="" />
@@ -114,13 +114,19 @@
         <div class="row">
           <div class="col-6 text-left">
             <p>
-              <small>Acceptitas LLC, 2020</small> <br />
+              <small> Acceptitas LLC, 2020</small> <br />
               <small>
-                Email: contact@acceptitas.com
+                Email:
+                <a href="mailto:contact@acceptitas.com">
+                  contact@acceptitas.com
+                </a>
               </small>
               <br />
               <small>
-                Phone: +1-(214)-930-6576
+                Phone:
+                <a href="tel:+12149306576">
+                  +1-(214)-930-6576
+                </a>
               </small>
             </p>
           </div>
@@ -131,21 +137,11 @@
                 <a
                   href="https://www.flaticon.com/authors/pixel-perfect"
                   title="Pixel perfect"
-                  >Pixel perfect</a
+                  >Pixel perfect,</a
                 >
-                from
-                <a href="https://www.flaticon.com/" title="Flaticon">
-                  www.flaticon.com</a
-                >
-                and
                 <a href="https://www.flaticon.com/authors/becris" title="Becris"
-                  >Becris</a
-                >
-                from
-                <a href="https://www.flaticon.com/" title="Flaticon">
-                  www.flaticon.com</a
-                >
-
+                  >Becris,
+                </a>
                 and
                 <a
                   href="https://www.flaticon.com/authors/freepik"
