--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-2 col-3 text-center offset-md-2">
+        <div class="col-md-2 col-4 text-center offset-2">
           <img src="images/index/icons/bulb.png" alt="">
           &nbsp;
           <h6>Strategy Consultations</h6>
         </div>
-        <div class="col-md-2 col-3 text-center">
+        <div class="col-md-2 col-4 text-center">
           <img src="images/index/icons/list.png" alt="">
           &nbsp;
           <h6>Narrative Assessment</h6>
         </div>
-        <div class="col-md-2 col-3 text-center">
+        <div class="col-md-2 col-4 text-center offset-md-0 offset-2">
           <img src="images/index/icons/speech.png" alt="">
           &nbsp;
           <h6>Mock Interviews</h6>
         </div>
-        <div class="col-md-2 col-3 text-center">
+        <div class="col-md-2 col-4 text-center">
           <img src="images/index/icons/pencil.png" alt="">
           &nbsp;
           <h6>Last-Minute Editing</h6>
@@ -152,12 +152,19 @@
         <div class="row">
           <div class="col-6 text-left">
             <p>
-              <small>Acceptitas LLC, 2020</small> <br>
               <small>
-              Email: contact@acceptitas.com
+              Acceptitas LLC, 2020</small> <br>
+              <small>
+                Email: 
+                <a href="mailto:contact@acceptitas.com">
+                  contact@acceptitas.com
+                </a>
               </small> <br>
               <small>
-              Phone: +1-(214)-930-6576
+                Phone: 
+                <a href="tel:+12149306576">
+                  +1-(214)-930-6576
+                </a>
               </small>
             </p>
 
