--- a/services.html
+++ b/services.html
@@ -177,7 +177,7 @@
       </div>
       <br />
       <div class="row">
-        <div class="col-md-2 col-4 offset-md-3 text-center">
+        <div class="col-md-2 col-6 offset-md-3 text-center">
           <img src="images/services/icons/notepad.png" alt="" />
           &nbsp;
           <h6>Essentials Package $399</h6>
@@ -186,7 +186,7 @@
             and two last-minute edits
           </p>
         </div>
-        <div class="col-md-2 col-4 text-center">
+        <div class="col-md-2 col-6 text-center">
           <img src="images/services/icons/target.png" alt="" />
           &nbsp;
           <h6>Competetive Package $899</h6>
@@ -195,7 +195,7 @@
             mock interviews, and unlimited last-minute editing
           </p>
         </div>
-        <div class="col-md-2 col-4 text-center">
+        <div class="col-md-2 col-6 offset-3 text-center">
           <img src="images/services/icons/trophy.png" alt="" />
           &nbsp;
           <h6>Elite Package $1,499</h6>
@@ -223,13 +223,19 @@
         <div class="row">
           <div class="col-6 text-left">
             <p>
-              <small>Acceptitas LLC, 2020</small> <br />
+              <small> Acceptitas LLC, 2020</small> <br />
               <small>
-                Email: contact@acceptitas.com
+                Email:
+                <a href="mailto:contact@acceptitas.com">
+                  contact@acceptitas.com
+                </a>
               </small>
               <br />
               <small>
-                Phone: +1-(214)-930-6576
+                Phone:
+                <a href="tel:+12149306576">
+                  +1-(214)-930-6576
+                </a>
               </small>
             </p>
           </div>
