--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
             mock interviews, and unlimited last-minute editing
           </p>
         </div>
-        <div class="col-md-2 col-6 offset-3 text-center">
+        <div class="col-md-2 offset-md-0 col-6 offset-3 text-center">
           <img src="images/services/icons/trophy.png" alt="" />
           &nbsp;
           <h6>Elite Package $1,499</h6>
