--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- For embedding links like on linked in or Facebook, this image should show -->
-    <img src="images/icon_logo_square.png" style="display: none;" />
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.jpg" style="width: 300px;" />
+        <img src="images/clear_logo.png" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
