--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="Reed Zimmermann" />
     <title>Acceptitas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -21,10 +20,12 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- For embedding links like on linked in or Facebook, this image should show -->
+    <img src="images/icon_logo_square.png" style="display: none;" />
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/clear_logo.png" style="width: 300px;" />
+        <img src="images/logo.jpg" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
