--- a/services.html
+++ b/services.html
@@ -98,10 +98,10 @@
           <h3>Strategy Consultations</h3>
           <p>
             Together we will examine your life experiences, interests, and
-            aspirations to start crafting your unique application narrative.
+            aspirations to begin crafting your unique narrative through your essays and other application materials.
             After our meeting, you will receive an assessment of your current
             narrative, its strengths, areas for growth, and an action plan for
-            refining your story across your application materials.
+            refining your story across your application. Two hours total.
           </p>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -120,10 +120,10 @@
           <h3>Narrative Assessment</h3>
           <p>
             We review your current application packet materials, provide
-            constructive feedback, and help you identify and amplify your
+            constructive feedback in a 1-on-1 meeting, and help you identify and amplify your
             strongest narratives. Part of this process is our signature mock
             admissions read which we use as a diagnostic test of your
-            narrative’s strength.
+            narrative’s strength. Two hours total.
           </p>
         </div>
       </div>
@@ -200,7 +200,7 @@
           &nbsp;
           <h6>Elite Package $1,499</h6>
           <p>
-            Unlimited services until you are fully confident in your application
+            Up to thirty hours of our services until you are fully confident in your application
           </p>
         </div>
       </div>
