--- a/about.html
+++ b/about.html
@@ -135,8 +135,8 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
           <p>
-            On the fence? Schedule a free consultation today to learn more about
-            how we can serve your goals and needs.
+            Let's meet! Schedule a free consultation today to talk about
+            your goals, needs, and how we can help.
           </p>
         </div>
       </div>
