--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
             cautioned that since writing and language learning would be too
             difficult, college might not be for him. Ironically, he developed a
             love for these subjects and has since worked as a middle-school
-            writing teacher, Editor-In-Chief of his highschool newspaper, and
+            writing teacher, Editor-In-Chief of his high school newspaper, and
             currently, a comedy writer. He also now speaks Spanish, French, and
             Russian, despite his early struggle with reading and writing. When
             it came time to apply to college, at first Emmet spent lots of time
@@ -135,8 +135,8 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
           <p>
-            Let's meet! Schedule a free consultation today to talk about
-            your goals, needs, and how we can help.
+            Let's meet! Schedule a free consultation today to talk about your
+            goals, needs, and how we can help.
           </p>
         </div>
       </div>
