--- a/services.html
+++ b/services.html
@@ -200,7 +200,7 @@
           &nbsp;
           <h6>Elite Package $1,499</h6>
           <p>
-            Up to fourty hours of our services until you are fully confident in your application
+            Up to forty hours of our services until you are fully confident in your application
           </p>
         </div>
       </div>
