--- a/services.html
+++ b/services.html
@@ -67,14 +67,13 @@
       <div class="row">
         <div class="col-md-8 offset-md-2 pop">
           <p>
-            Acceptitas offers a wide range of services to help students craft
+            Acceptitas offers a wide range of virtual services to help students craft
             their most compelling narrative through all parts of the college
-            application and at all stages in the process, with a special focus
+            application, with a special focus
             on the essays. Unlike other companies, all our services are
             incredibly personal (we’re students after all!), meaning we will
             work together 1-on-1 and always give you our full attention. Find
-            descriptions of our services, prices, and packages below. Hover your
-            mouse over a service image to view its price. Ready to get started?
+            descriptions of our services, prices, and packages below. Hover over a service image to view its price. Ready to get started?
             Visit our contact page to schedule a free consultation!
           </p>
         </div>
