--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
               alt="strategy"
             />
             <div class="hover">
-              <div class="text">$99/hour</div>
+              <div class="text">$64/hour</div>
             </div>
           </div>
 
@@ -100,7 +100,7 @@
             aspirations to begin crafting your unique narrative through your essays and other application materials.
             After our meeting, you will receive an assessment of your current
             narrative, its strengths, areas for growth, and an action plan for
-            refining your story across your application. Two hours total.
+            refining your story across your application. Typically two-to-three hours total.
           </p>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -111,7 +111,7 @@
               alt="narrative"
             />
             <div class="hover">
-              <div class="text">$74/hour</div>
+              <div class="text">$59/hour</div>
             </div>
           </div>
           <br />
@@ -122,7 +122,7 @@
             constructive feedback in a 1-on-1 meeting, and help you identify and amplify your
             strongest narratives. Part of this process is our signature mock
             admissions read which we use as a diagnostic test of your
-            narrative’s strength. Two hours total.
+            narrative’s strength. Typically two hours total.
           </p>
         </div>
       </div>
@@ -136,7 +136,7 @@
               alt="interview"
             />
             <div class="hover">
-              <div class="text">$79 per session</div>
+              <div class="text">$49 per hour</div>
             </div>
           </div>
           <br />
@@ -147,7 +147,7 @@
             overall application narrative through our mock interviews, conducted
             by someone who has successful first-hand experience. Each mock
             interview comes with an after-action report that identifies
-            actionable areas of growth for the big day.
+            actionable areas of growth for the big day. Typically two hours total.
           </p>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -182,7 +182,7 @@
           <h6>Essentials Package $399</h6>
           <p>
             One strategy meeting, one narrative assessment, one mock interview,
-            and two last-minute edits
+            and two last-minute edits. 8 hours of services at $50/hour.
           </p>
         </div>
         <div class="col-md-2 col-6 text-center">
@@ -191,15 +191,15 @@
           <h6>Competetive Package $899</h6>
           <p>
             Up to three strategy meetings, three narrative assessments, three
-            mock interviews, and unlimited last-minute editing
+            mock interviews, and unlimited last-minute editing. 20-22 hours of services valued at $45/hour.
           </p>
         </div>
         <div class="col-md-2 offset-md-0 col-6 offset-3 text-center">
           <img src="images/services/icons/trophy.png" alt="" />
           &nbsp;
-          <h6>Elite Package $1,499</h6>
+          <h6>Elite Package $1,199</h6>
           <p>
-            Up to forty hours of our services until you are fully confident in your application
+            Up to 30 hours of our services until you are fully confident in your application. Valued at $40/hour.
           </p>
         </div>
       </div>
