--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
               alt="interview"
             />
             <div class="hover">
-              <div class="text">$49 per hour</div>
+              <div class="text">$49/hour</div>
             </div>
           </div>
           <br />
