--- a/about.html
+++ b/about.html
@@ -67,14 +67,14 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <p>
-            Acceptitas was founded by Emmet Halm to empower motivated students
+           Acceptitas was founded by Emmet Halm to empower motivated students
             like him to dream big and find their own narrative through his
             proven approach. At Acceptitas, we believe that everyone, no matter
             their background deserves a fair shot to develop their full
-            potential. Unlike other college admissions services, we offer a
+            potential. <br></br>Unlike other college admissions services, we offer a
             holistic approach that focuses on how all the pieces of the college
             application come together to form a larger, more compelling student
-            narrative. Our work at Acceptitas is also incredibly personal, and
+            narrative. <br></br>Our work at Acceptitas is also incredibly personal, and
             one of our strengths is being able to connect student-to-student.
             Simply put, we are in the business of empowering those who dream
             big. As such, any student who believes they are a good fit for
@@ -88,10 +88,10 @@
         <div class="col-md-4 offset-md-2 my-auto">
           <h3>Hi, I'm Emmet!</h3>
           <p>
-            … is what Emmet would say with a big smile if this was written in
+           … is what Emmet would say with a big smile if this was written in
             the first person. Emmet is an undergraduate at Harvard who has a
             passion for helping others succeed, experience teaching, and
-            first-hand experience in the college admissions process. With an eye
+            first-hand experience in the college admissions process. <br></br>With an eye
             for engaging story-telling, Emmet studies history, writes about
             politics, and frequently performs standup comedy at Harvard. He
             loves meeting new people, learning what motivates them, and helping
@@ -115,16 +115,16 @@
           <p>
             Emmet struggled with learning differences in school and was
             cautioned that since writing and language learning would be too
-            difficult, college might not be for him. Ironically, he developed a
+            difficult, college might not be for him. <br></br>Ironically, he developed a
             love for these subjects and has since worked as a middle-school
             writing teacher, Editor-In-Chief of his high school newspaper, and
             currently, a comedy writer. He also now speaks Spanish, French, and
-            Russian, despite his early struggle with reading and writing. When
+            Russian, despite his early struggle with reading and writing. <br></br>When
             it came time to apply to college, at first Emmet spent lots of time
             on cliche essays, fruitless premises, and focused on what he thought
             his application should look like. Only when he reflected on his life
             in broad terms did he realize that he had a compelling narrative to
-            tell. Through various techniques developed along the way, Emmet was
+            tell. <br></br>Through various techniques developed along the way, Emmet was
             able to bring his personal narrative to life throughout his college
             application. He created Acceptitas to make college admissions more
             personal, more engaging, and more affordable for students like
