--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,14 @@
   </head>
   <body
     style="
-      background-image: url(images/icon_bg.png);
       background-position: right -5em bottom 0em;
       background-repeat: no-repeat;
     "
   >
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-light">
       <a class="navbar-brand" href="index.html">
-        <img src="images/clear_logo.png" style="width: 300px;" />
+        <img src="images/logo.jpg" style="width: 300px;" />
       </a>
       <button
         class="navbar-toggler"
@@ -65,7 +64,7 @@
     <div class="container-fluid">
       <div class="row band">
         <div class="col my-auto text-center">
-          <h1>Success Starts Here</h1>
+          <h1><b>Success Starts Here</b></h1>
         </div>
       </div>
       <br />
@@ -80,34 +79,43 @@
         <div class="col-md-8 offset-md-2">
           <p>
             Congratulations! You are one step closer to building your strongest
-            college application. Give us a call
+            college application. Fill out this form to learn more about Acceptitas. You can also give us a call
             <a href="tel:+12149306576">(214-930-6576)</a> or send us an email
             <a href="mailto:contact@acceptitas.com">(contact@acceptitas.com)</a>
             today to set up a free consultation! Let us know your name and how
             we should get in contact with you, and we’ll be in touch. Let’s get
             building!
           </p>
+         <div class="col-md-8 offset-md-2"> <script>(function(t,e,s,n){var o,a,c;t.SMCX=t.SMCX||[],e.getElementById(n)||(o=e.getElementsByTagName(s),a=o[o.length-1],c=e.createElement(s),c.type="text/javascript",c.async=!0,c.id=n,c.src="https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd9WRnEjzDAJI96ef6TnJ_2Fd1kB_2FAfjrFPYLbXUsEyimCy.js",a.parentNode.insertBefore(c,a))})(window,document,"script","smcx-sdk");</script><a style="font: 12px Helvetica, sans-serif; color: #999; text-decoration: none;" href=www.surveymonkey.com> Create your own user feedback survey </a>
+             </div>
         </div>
       </div>
+      
       &nbsp;
       <div class="row">
         <div class="col-md-2 col-4 text-center offset-md-3">
           <img src="images/contact/icons/mail.png" alt="" />
           &nbsp;
-          <h6>Call or Email</h6>
+          <h6><b>Call or Email</b></h6>
         </div>
         <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/meeting.png" alt="" />
           &nbsp;
-          <h6>Free Consultation</h6>
+          <h6><b>Free Consultation</b></h6>
         </div>
         <div class="col-md-2 col-4 text-center">
           <img src="images/contact/icons/mountain.png" alt="" />
           &nbsp;
-          <h6>Build Your Narrative</h6>
+          <h6><b>Build Your Narrative</b></h6>
         </div>
       </div>
     </div>
+    <!-- Calendly badge widget begin -->
+         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+         <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/emmet-halm', text: 'Schedule a Free Consultation!', color: '#100e0e', textColor: '#ffffff', branding: true });</script>
+         <!-- Calendly badge widget end -->
+    
     <!-- Footer -->
     <footer id="sticky-footer" class="py-4">
       <div class="container">
@@ -213,3 +221,4 @@
     </footer>
   </body>
 </html>
+
