--- a/services.html
+++ b/services.html
@@ -207,7 +207,7 @@
         <div class="col-md-2 col-6 text-center">
           <img src="images/services/icons/target.png" alt="" />
           &nbsp;
-          <h6><b>Competetive Package $899</b></h6>
+          <h6><b>Competitive Package $899</b></h6>
           <p>
             Up to three strategy meetings, three narrative assessments, three
             mock interviews, and unlimited last-minute editing. 20-22 hours of services valued at $45/hour.
