--- a/about.html
+++ b/about.html
@@ -79,13 +79,13 @@
         <div class="col-md-4 offset-md-2 my-auto">
           <h3>Hi, I'm Emmet!</h3>
           <p>
-            … is what Emmet would say with a big smile if this was written in
+            … is what Emmet would say with a big smile if this were written in
             the first person. Emmet is an undergraduate at Harvard who has a
             passion for helping others succeed, experience teaching, and
-            first-hand experience in the college admissions process. He also has experience teaching, consulting, and mentoring students applying to college.<br></br>With an eye
+            first-hand experience in the college admissions process.<br></br>With an eye
             for engaging story-telling, Emmet studies history, writes about
             politics, and frequently performs standup comedy at Harvard. He
-            loves meeting new people, learning what motivates them, and helping
+            loves meeting new people and helping
             them maximize their strengths.
           </p>
         </div>
