--- a/services.html
+++ b/services.html
@@ -75,9 +75,9 @@
       
       <div class="row ">
         <div class="col-md-6 offset-md-2 col-sm-8 offset-sm-0 my-auto">
-          <h3> Pre-/Early-Highschool Strategic Planning and Mentoring</h3>
+          <h3>Early Strategic Planning and Mentoring</h3>
           <p>
-            We offer consultations and mentoring for 7th, 8th, 9th, and 10th graders looking to get the most out of high school, follow their passions, and set themselves up for success. We help students identify opportunities in their local area to best pursue their interests in a meaningful way that will later support their holistic picture. These meetings, along with regular check ins, workshops, and events are used to guide and mentor students and help them develop their areas of excellence.
+            We offer consultations and mentoring for 7th-11th graders looking to get the most out of high school, follow their passions, and set themselves up for success. We help students identify opportunities in their local area to best pursue their interests in a meaningful way that will later support their holistic picture. These meetings, along with regular check ins, workshops, and events are used to guide and mentor students and help them develop their areas of excellence.
           </p>
         </div>
         <div class="col-md-2 col-sm-4">
